--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,22 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg sticky-top navbars">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler navtog" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav justify-content-left flex-grow-1 navlist">
+                <li class="nav-item">
+                    <a href="/" class="nav-link"> Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/" class="nav-link"> Grades</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/" class="nav-link"> Account</a>
+                </li>
+            </ul>
+        </div>
+        </div>
+</nav>
+
