updating ts files for scc usage

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="wrapper">
+    <div class="container d-flex justify-content-center bottumPart">
+        <p class="fmsg"> &#169; Nlern LMS 2024 </p>
+    </div>
+</div>
+
