updating component1: landing page

--- a/src/app/landingpage/component1/component1.component.html
+++ b/src/app/landingpage/component1/component1.component.html
@@ -1,1 +1,18 @@
-<p>component1 works!</p>
+<div class="wrapper">
+    <app-header></app-header>
+    <div class="grid-container justify-content-center mainGrid">
+        <div class="grid-item grid-item-1">
+            <div class="container d-flex justify-content-center profile">
+                    <img src=""  height="170px" width="165px" class="prof" alt="profile picture"/>
+            </div>
+            <div class="container d-flex justify-content-center desc">
+                <p class="desc1">N-Learn</p> </div>
+                <div class="container d-flex justify-content-center desc">
+                <p class="desc2">Together, we can change the world by sharing knowledge! Welcome to N-Learn!</p>
+            </div>
+        </div>
+    </div>
+    <app-footer></app-footer>
+</div>
+
+
