--- a/src/app/landingpage/component1/component1.component.html
+++ b/src/app/landingpage/component1/component1.component.html
@@ -3,7 +3,7 @@
     <div class="grid-container justify-content-center mainGrid">
         <div class="grid-item grid-item-1">
             <div class="container d-flex justify-content-center profile">
-                    <img src=""  height="170px" width="165px" class="prof" alt="profile picture"/>
+                    <img src="../../../assets/edu2.jpeg"  height="200px" width="200px" class="prof" alt="profile picture"/>
             </div>
             <div class="container d-flex justify-content-center desc">
                 <p class="desc1">N-Learn</p> </div>
