adding navigation components, updating landing page

--- a/src/app/landingpage/component1/component1.component.html
+++ b/src/app/landingpage/component1/component1.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
-    <app-header></app-header>
+
     <div class="grid-container justify-content-center mainGrid">
         <div class="grid-item grid-item-1">
+            <div class="container  justify-content-center landingbox">
             <div class="container d-flex justify-content-center profile">
                     <img src="../../../assets/edu2.jpeg"  height="200px" width="200px" class="prof" alt="profile picture"/>
             </div>
@@ -9,10 +10,15 @@
                 <p class="desc1">N-Learn</p> </div>
                 <div class="container d-flex justify-content-center desc">
                 <p class="desc2">Together, we can change the world by sharing knowledge! Welcome to N-Learn!</p>
+                   
             </div>
+            <div class="container d-flex justify-content-center">
+            <a href="/" class="loginbtn btn btn-primary btn-lg">Log-In</a>
+            </div>
+        </div>
         </div>
     </div>
     <app-footer></app-footer>
-</div>
+</div> 
 
 
