--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,5 +1,6 @@
 .navbars{
-    background-color: rgba(182, 195, 202, 0.285);
+    //background-image: linear-gradient(to right bottom, #7e1b53, #6d2b66, #563871, #3d4176, #224774, #1b507a, #16597f, #156183, #1d7197, #2582ac, #2d93c1, #35a5d6);
+    background-color: rgba(98, 139, 167, 0.829);
     -webkit-box-shadow: -8px
     7px
     19px
