--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,13 +7,16 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav justify-content-left flex-grow-1 navlist">
                 <li class="nav-item">
-                    <a href="/" class="nav-link"> Dashboard</a>
+                    <a routerLink="/" routerLinkActive="active" class="nav-link"> Welcome!</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"> Grades</a>
+                    <a routerLink="/" routerLinkActive="active" class="nav-link"> Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"> Account</a>
+                    <a routerLink="/" routerLinkActive="active"  class="nav-link"> Grades</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/account" routerLinkActive="active" class="nav-link"> Account</a>
                 </li>
             </ul>
         </div>
