updating routes, adding main dashboard elements, updating header and footer

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,13 +10,16 @@
                     <a routerLink="/" routerLinkActive="active" class="nav-link"> Welcome!</a>
                 </li>
                 <li class="nav-item">
-                    <a routerLink="/" routerLinkActive="active" class="nav-link"> Dashboard</a>
+                    <a routerLink="/dashboard" routerLinkActive="active" class="nav-link"> Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/" routerLinkActive="active"  class="nav-link"> Grades</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/account" routerLinkActive="active" class="nav-link"> Account</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/submission" routerLinkActive="active" class="nav-link"> Submissions</a>
                 </li>
             </ul>
         </div>
