--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,18 @@
-<p>dashboard works!</p>
+<div class="wrapper">
+    <div class="container d-flex justify-content-center">
+        <p class="welcome"> Welcome Back User123!</p>
+    </div>
+    <div class="grid-container justify-content-center mainGrid">
+        <div class="grid-item grid-item-1 grids">
+            <div class="container d-flex justify-content-center title">
+                Special Notices
+            </div>
+        </div>
+        <div class="grid-item grid-item-2 grids">
+            <div class="container d-flex justify-content-center title">
+                Discussion Forum
+            </div>
+        </div>
+    </div>
+    <app-maindashboardprops></app-maindashboardprops>
+</div>
