--- a/src/app/subcomponents/maindashboardprops/maindashboardprops.component.html
+++ b/src/app/subcomponents/maindashboardprops/maindashboardprops.component.html
@@ -1,1 +1,13 @@
-<p>maindashboardprops works!</p>
+<div class="grid-container justify-content-center maing">
+    <div class="container justify-content-center">
+        <p class="modt"> Your Modules:</p>
+    </div>
+    <div class="container justify-content-center cardcon">
+        <div class="container d-flex modcard">
+            <p class="mod"> <a routerLink="/modulecontent" routerLinkActive="active"  class="nav-link"> PUSL3031 - FULL STACK DEVELOPMET </a></p>
+        </div>
+        <div class="container d-flex modcard">
+            <p class="mod"> PUSL1021 - COMPUTING FINAL PROJECT</p>
+        </div>
+    </div>
+</div>
