--- a/src/app/landingpage/component1/component1.component.html
+++ b/src/app/landingpage/component1/component1.component.html
@@ -8,17 +8,20 @@
             </div>
             <div class="container d-flex justify-content-center desc">
                 <p class="desc1">N-Learn</p> </div>
-                <div class="container d-flex justify-content-center desc">
-                <p class="desc2">Together, we can change the world by sharing knowledge! Welcome to N-Learn!</p>
+                <div class="container justify-content-center desc">
+                <p class="desc2 justify-content-center">Together, we can change the world by sharing knowledge! Welcome to N-Learn! <br>
+                    Open the Door to Your Future: Each lesson is a key, each module a door. Open them with confidence, for behind every door lies the promise of a brighter, more enlightened tomorrow.
+                <br>
+                Explore the Infinite Library: Our courses are the keys to unlock doors of opportunity. From the foundational basics to advanced frontiers, every module is a chapter in your personal odyssey.
+                </p>
                    
             </div>
             <div class="container d-flex justify-content-center">
-            <a href="/" class="loginbtn btn btn-primary btn-lg">Log-In</a>
+            <a routerLink="/login" routerLinkActive="active" class="loginbtn btn btn-primary btn-lg">Log-In</a>
             </div>
         </div>
         </div>
     </div>
-    <app-footer></app-footer>
 </div> 
 
 
