--- a/src/app/landingpage/component1/component1.component.scss
+++ b/src/app/landingpage/component1/component1.component.scss
@@ -34,7 +34,9 @@
          font-weight: bold;
      }
      & .desc2{
-         font-size: 18px;
+         font-size: 16px;
+         justify-content: center;
+         justify-self: center !important;
      }
      & .profile{
          padding-bottom: 10px;
