--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,4 +1,5 @@
 .wrapper{
-    margin-top: 30px;
+   // margin-top: 30px;
    // background-color: rgb(38, 108, 148);
+   background-color: rgba(98, 139, 167, 0.829);
 }
