--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,6 +1,7 @@
 .navbars{
     //background-image: linear-gradient(to right bottom, #7e1b53, #6d2b66, #563871, #3d4176, #224774, #1b507a, #16597f, #156183, #1d7197, #2582ac, #2d93c1, #35a5d6);
-    background-color: rgba(98, 139, 167, 0.829);
+    background-image: linear-gradient(to right, #7e3765b9, #734b81b0, #605e97af, #486ea4ab, #327fa8b0);
+    //background-color: rgba(98, 139, 167, 0.829);
     -webkit-box-shadow: -8px
     7px
     19px
