--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,12 +5,12 @@
     <div class="grid-container justify-content-center mainGrid">
         <div class="grid-item grid-item-1 grids">
             <div class="container d-flex justify-content-center title">
-                Special Notices
+                <a routerLink="/notice" routerLinkActive="active"  class="nav-link">  Special Notices </a>
             </div>
         </div>
         <div class="grid-item grid-item-2 grids">
             <div class="container d-flex justify-content-center title">
-                Discussion Forum
+                <a routerLink="/chatroom" routerLinkActive="active"  class="nav-link">  Discussion Forum </a>
             </div>
         </div>
     </div>
