--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,13 +7,13 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav justify-content-left flex-grow-1 navlist">
                 <li class="nav-item">
-                    <a routerLink="/" routerLinkActive="active" class="nav-link"> Welcome!</a>
+                    <a routerLink="/" routerLinkActive="active" class="nav-link"> N-Learn</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/dashboard" routerLinkActive="active" class="nav-link"> Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a routerLink="/" routerLinkActive="active"  class="nav-link"> Grades</a>
+                    <a routerLink="/grades" routerLinkActive="active"  class="nav-link"> Grades</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/account" routerLinkActive="active" class="nav-link"> Account</a>
