--- a/src/app/subcomponents/noticestaff/noticestaff.component.html
+++ b/src/app/subcomponents/noticestaff/noticestaff.component.html
@@ -1,1 +1,21 @@
-<p>noticestaff works!</p>
+<div class="wrapper">
+    <div class="grid-container maing justify-content-center">
+        <div class="container justify-content-center nt">
+            Post Special Notices Here!
+        </div>
+       <div class="container justify-content-center notifybox">
+        
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Notice Title</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Notice</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <div class="container ">
+          <button type="submit" class="btn btcon btn-primary btn-lg"> Post</button>
+          </div>
+       </div>
+    </div>
+</div>
