creating the elements of grades and discssion forum

--- a/src/app/pages/grades/grades.component.html
+++ b/src/app/pages/grades/grades.component.html
@@ -1,1 +1,39 @@
-<p>grades works!</p>
+<div class="wrapper">
+    <div class="container grdnote">
+        Available Marks - Year 3 Semeseter 1
+    </div>
+    <div class="grid-container maing">
+        <div class="griditem grid-item-1 grids">
+            Module
+        </div>
+        <div class="griditem grid-item-1 grids">
+            Examination
+        </div>
+        <div class="griditem grid-item-1 grids">
+             Coursework
+        </div>
+        <div class="griditem grid-item-1 grids">
+            Total marks
+        </div>
+        <div class="griditem grid-item-1 grids">
+            Grade
+        </div>
+    </div>
+    <div class="grid-container maing">
+        <div class="griditem grid-item-1 grids">
+            PUSL3031 - Full Stack Development
+        </div>
+        <div class="griditem grid-item-1 grids">
+            80.50
+        </div>
+        <div class="griditem grid-item-1 grids">
+             60.21
+        </div>
+        <div class="griditem grid-item-1 grids">
+             70.84
+        </div>
+        <div class="griditem grid-item-1 grids">
+            A
+        </div>
+    </div>
+</div>
