--- a/src/app/subcomponents/chatroom/chatroom.component.html
+++ b/src/app/subcomponents/chatroom/chatroom.component.html
@@ -1,1 +1,30 @@
-<p>chatroom works!</p>
+<div class="wrapper">
+    <div class="container justify-content-center discforum">
+        <div class="container toppan">
+            Batch 10 - Discussion Forum
+        </div > 
+        <div class=" container maing">
+            <div class="container d-flex ">
+                <div class="container chato">
+                    &#64; user123
+                    Hello there!
+                </div>
+    
+            </div>
+            <div class="container d-flex ">
+                <div class="container chatu">
+                    &#64; user125
+                    Hello there!
+                </div>
+            </div>
+        </div>
+        <div class="container chatenter">
+            <form>
+            <div class="container d-flex">
+                <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="1"> Type here</textarea>
+                <button type="submit" class="btn btcon btn-primary btn-lg"> Post</button>
+                </div>
+                </form>
+        </div>
+    </div>
+</div>
