--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
     <div class="container d-flex justify-content-center">
+        <img src="../../../assets/nlearnlogo.png" width="150px" height="110px">
         <p class="welcome"> Welcome Back User123!</p>
     </div>
     <div class="grid-container justify-content-center mainGrid">
