--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,5 +1,6 @@
 .wrapper{
    // margin-top: 30px;
    // background-color: rgb(38, 108, 148);
-   background-color: rgba(98, 139, 167, 0.829);
+   //background-color: rgba(98, 139, 167, 0.829);
+   background-image: linear-gradient(to right, #7e3765b9, #734b81b0, #605e97af, #486ea4ab, #327fa8b0);
 }
