adding module content front end elements

--- a/src/app/pages/modulecontent/modulecontent.component.html
+++ b/src/app/pages/modulecontent/modulecontent.component.html
@@ -1,1 +1,18 @@
-<p>modulecontent works!</p>
+<div class="wrapper">
+    <div class="container d-flex justify-content-center">
+        <p class="welcome"> PUSL3031 - FULL-STACK DEVELOPMENT </p>
+    </div>
+    <div class="container justify-content-center cardmod">
+        <p class="title"> Lecture Notes</p>
+        </div>
+        <div class="container justify-content-center cardmod">
+            <p class="title"> Lab Materials</p>
+            </div>
+            <div class="container justify-content-center cardmod">
+                <p class="title"> Assignments</p>
+                </div>
+                <div class="container justify-content-center cardmod">
+                    <p class="title"> Submissions</p>
+                    </div>
+   
+</div>
