--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -23,7 +23,7 @@
   <section class="about-me-section">
     <h2>About Me</h2>
     <!-- Textarea to display/edit user's bio or description -->
-    <textarea [(ngModel)]="userBio"></textarea>
+    <textarea> userBio </textarea>
     <button (click)="saveBio()">Save Bio</button>
   </section>
 
@@ -44,9 +44,9 @@
     <!-- Form to edit user's details -->
     <form>
       <label for="userName">Name:</label>
-      <input type="text" id="userName" [(ngModel)]="userName">
+      <input type="text" id="userName" >
       <label for="userEmail">Email:</label>
-      <input type="email" id="userEmail" [(ngModel)]="userEmail">
+      <input type="email" id="userEmail" >
       <label for="userphoto">Upload Photo:</label>
       <input type="file" (change)="onFileSelected($event)">
       <button (click)="saveProfile()">Save</button>
