--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,18 +3,18 @@
   <form>
     <div class="form-group">
       <label for="userType">I am a:</label>
-      <select id="userType" [(ngModel)]="userType">
-        <option value="student">Student</option>git 
+      <select id="userType" >
+        <option value="student">Student</option>
         <option value="teacher">Teacher</option>
       </select>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter your email" [(ngModel)]="email">
+      <input type="email" id="email" placeholder="Enter your email" >
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter your password" [(ngModel)]="password">
+      <input type="password" id="password" placeholder="Enter your password" >
     </div>
     <button class="login-button" (click)="login()">Login</button>
   </form>
