adding staff module components, updating grade components

--- a/src/app/pages/grades/grades.component.html
+++ b/src/app/pages/grades/grades.component.html
@@ -36,4 +36,10 @@
             A
         </div>
     </div>
+    <div class="container d-flex justify-content-center">
+        <form>
+
+          <button type="submit" class="btn btcon btn-primary btn-lg"> Download Results</button>
+        </form>
+    </div>
 </div>
