--- a/src/app/subcomponents/staffmodulecontent/staffmodulecontent.component.html
+++ b/src/app/subcomponents/staffmodulecontent/staffmodulecontent.component.html
@@ -1,1 +1,29 @@
-<p>staffmodulecontent works!</p>
+<div class="wrapper">
+    <div class="grid-container maing justify-content-center">
+        <div class="container justify-content-center nt">
+            Add Lecture Materials Here!
+        </div>
+       <div class="container justify-content-center notifybox">
+        
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">File title</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Material Type</label>
+            <select id="lecType" >
+                <option value="lecnote">Lec Notes</option>
+                <option value="assignment">Assignment</option>
+                <option value="labsheet">Lab Materials</option>
+              </select>
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Attach file here</label>
+            <input class="form-control" type="file" id="confile">
+          </div>
+          <div class="container ">
+          <button type="submit" class="btn btcon btn-primary btn-lg"> Add</button>
+          </div>
+       </div>
+    </div>
+</div>
