adding form controllers to the forms to send reqs to backend

--- a/src/app/pages/grades/grades.component.html
+++ b/src/app/pages/grades/grades.component.html
@@ -37,9 +37,8 @@
         </div>
     </div>
     <div class="container d-flex justify-content-center">
-        <form>
-
-          <button type="submit" class="btn btcon btn-primary btn-lg"> Download Results</button>
-        </form>
+        <form (submit)="downloadResults()">
+            <button type="submit" class="btn btcon btn-primary btn-lg">Download Results</button>
+          </form>
     </div>
 </div>
