--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -42,14 +42,14 @@
   <section class="edit-profile-section">
     <h2>Edit Profile</h2>
     <!-- Form to edit user's details -->
-    <form>
-      <label for="userName">Name:</label>
-      <input type="text" id="userName" >
+    <form (submit)="saveProfile()">
+      <label for="uName">Name:</label>
+      <input type="text" id="uName" [(ngModel)]="userName" name="uName" required [ngModelOptions]="{standalone: true}">
       <label for="userEmail">Email:</label>
-      <input type="email" id="userEmail" >
+      <input type="email" id="uEmail" [(ngModel)]="userEmail" name="uEmail" required [ngModelOptions]="{standalone: true}">
       <label for="userphoto">Upload Photo:</label>
-      <input type="file" (change)="onFileSelected($event)">
-      <button (click)="saveProfile()">Save</button>
+      <input type="file" (change)="onFileSelected($event)" id="userphoto" name="userphoto">
+      <button type="submit">Save</button>
     </form>
   </section>
 
