--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,21 +1,22 @@
 <div class="login-container">
   <h2>Login</h2>
-  <form>
+  <form (ngSubmit)="login()">
     <div class="form-group">
       <label for="userType">I am a:</label>
-      <select id="userType" >
+      <select id="userType" [(ngModel)]="userType" name="userType" required>
         <option value="student">Student</option>
         <option value="teacher">Teacher</option>
       </select>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter your email" >
+      <input type="email" id="email" placeholder="Enter your email" [(ngModel)]="email" name="email" required>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter your password" >
+      <input type="password" id="password" placeholder="Enter your password" [(ngModel)]="password" name="password" required>
     </div>
-    <button class="login-button" (click)="login()">Login</button>
+    <button type="submit" class="login-button">Login</button>
   </form>
 </div>
+
