--- a/src/app/subcomponents/chatroom/chatroom.component.html
+++ b/src/app/subcomponents/chatroom/chatroom.component.html
@@ -6,6 +6,15 @@
         <div class=" container maing">
             <div class="container d-flex ">
                 <div class="container chato">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary btndrop dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          ...
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li><button class="dropdown-item"  type="submit">Edit</button></li>
+                          <li><button class="dropdown-item" type="submit">Delete</button></li>
+                        </ul>
+                      </div>
                     &#64; user123
                     Hello there!
                 </div>
@@ -13,18 +22,27 @@
             </div>
             <div class="container d-flex ">
                 <div class="container chatu">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary btndrop dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          ...
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li><button class="dropdown-item"  type="submit">Edit</button></li>
+                          <li><button class="dropdown-item" type="submit">Delete</button></li>
+                        </ul>
+                      </div>
                     &#64; user125
                     Hello there!
                 </div>
             </div>
         </div>
         <div class="container chatenter">
-            <form>
-            <div class="container d-flex">
-                <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="1"> Type here</textarea>
-                <button type="submit" class="btn btcon btn-primary btn-lg"> Post</button>
+            <form (ngSubmit)="submitForm()">
+                <div class="container d-flex">
+                  <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="1" [(ngModel)]="postData.text"></textarea>
+                  <button type="submit" class="btn btcon btn-primary btn-lg">Post</button>
                 </div>
-                </form>
+              </form>
         </div>
     </div>
 </div>
