--- a/src/app/subcomponents/chatroom/chatroom.component.scss
+++ b/src/app/subcomponents/chatroom/chatroom.component.scss
@@ -5,6 +5,10 @@
 & .maing{
     padding: 20px;
 }
+& .btndrop {
+    background: transparent !important;
+    border-style: none;
+}
 
 & .discforum{
     box-shadow: 1px 0 4px 3px #0a2438bd;
