--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="wrapper">
 <div class="login-container">
   <h2>Login</h2>
   <form (ngSubmit)="login()">
@@ -18,5 +19,6 @@
     </div>
     <button type="submit" class="login-button">Login</button>
   </form>
+</div>
 </div>
 
