--- a/src/app/subcomponents/submissionsstaff/submissionsstaff.component.html
+++ b/src/app/subcomponents/submissionsstaff/submissionsstaff.component.html
@@ -1,1 +1,9 @@
-<p>submissionsstaff works!</p>
+<div class="wrapper">
+    <div class="container d-flex justify-content-center">
+        <p class="welcome"> Submitted Assignments</p>
+    </div>
+    <div class="container justify-content-center cardmod">
+        <p class="title"> Module: PUSL3031</p>
+        </div>
+   
+</div>
