adding service layers for backend connections, update few components

--- a/src/app/subcomponents/chatroom/chatroom.component.html
+++ b/src/app/subcomponents/chatroom/chatroom.component.html
@@ -7,14 +7,8 @@
             <div class="container d-flex ">
                 <div class="container chato">
                     <div class="dropdown">
-                        <button class="btn btn-secondary btndrop dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          ...
-                        </button>
-                        <ul class="dropdown-menu">
-                          <li><button class="dropdown-item"  type="submit">Edit</button></li>
-                          <li><button class="dropdown-item" type="submit">Delete</button></li>
-                        </ul>
-                      </div>
+                      
+                    </div>
                     &#64; user123
                     Hello there!
                 </div>
@@ -22,15 +16,17 @@
             </div>
             <div class="container d-flex ">
                 <div class="container chatu">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary btndrop dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          ...
-                        </button>
-                        <ul class="dropdown-menu">
-                          <li><button class="dropdown-item"  type="submit">Edit</button></li>
-                          <li><button class="dropdown-item" type="submit">Delete</button></li>
-                        </ul>
-                      </div>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary btndrop dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      ...
+                    </button>
+                    <ul class="dropdown-menu">
+                      <form>
+                      <li><button class="dropdown-item"  type="submit">Edit</button></li>
+                      <li><button class="dropdown-item" type="submit">Delete</button></li>
+                      </form>
+                    </ul>
+                  </div>
                     &#64; user125
                     Hello there!
                 </div>
