--- a/src/app/subcomponents/maindashboardprops/maindashboardprops.component.html
+++ b/src/app/subcomponents/maindashboardprops/maindashboardprops.component.html
@@ -3,8 +3,10 @@
         <p class="modt"> Your Modules:</p>
     </div>
     <div class="container justify-content-center cardcon">
-        <div class="container d-flex modcard">
-            <p class="mod"> <a routerLink="/modulecontent" routerLinkActive="active"  class="nav-link"> PUSL3031 - FULL STACK DEVELOPMET </a></p>
+        <div class="container d-flex modcard" *ngFor="let moduleName of moduleNames">
+            <p class="mod"> <a [routerLink]="'/modulecontent/' + moduleName"  routerLinkActive="active"  class="nav-link"> </a> 
+                {{ moduleName }}
+            </p>
         </div>
         <div class="container d-flex modcard">
             <p class="mod"> PUSL1021 - COMPUTING FINAL PROJECT</p>
