--- a/src/app/pages/account/account.component.scss
+++ b/src/app/pages/account/account.component.scss
@@ -1,5 +1,8 @@
 /* account.component.scss */
-
+.button {
+  background-color: #d8b8ff; 
+  color: #fff; 
+}
 /* Overall styles for the account page */
 .account-page {
   display: flex;
