--- a/src/app/subcomponents/disclist/disclist.component.html
+++ b/src/app/subcomponents/disclist/disclist.component.html
@@ -4,6 +4,7 @@
     </div>
     <div class="container justify-content-center cardmod">
         <p class="title"> Batch List</p>
+        <p *ngFor="let batch of discussionList" class="title dgroup"> {{ batch.batchID }} </p>
         </div>
    
 </div>
