--- a/src/app/subcomponents/submissionsstaff/submissionsstaff.component.html
+++ b/src/app/subcomponents/submissionsstaff/submissionsstaff.component.html
@@ -4,6 +4,9 @@
     </div>
     <div class="container justify-content-center cardmod">
         <p class="title"> Module: PUSL3031</p>
+        <div *ngFor="let submission of studentSubmissions" class="container">
+            <p>{{ submission.fname }}</p>
+          </div>
         </div>
    
 </div>
