--- a/src/app/pages/grades/grades.component.html
+++ b/src/app/pages/grades/grades.component.html
@@ -3,39 +3,28 @@
         Available Marks - Year 3 Semeseter 1
     </div>
     <div class="grid-container maing">
-        <div class="griditem grid-item-1 grids">
-            Module
+        <div *ngFor="let header of ['Module', 'Examination', 'Coursework', 'Total marks', 'Grade']" class="griditem grid-item-1 grids">
+          {{ header }}
         </div>
-        <div class="griditem grid-item-1 grids">
-            Examination
+      </div>
+    
+      <div class="grid-container maing" *ngFor="let grade of grades">
+        <div class="griditem grid-item-1 g1 grids">
+          {{ grade.modID }}
         </div>
-        <div class="griditem grid-item-1 grids">
-             Coursework
+        <div class="griditem grid-item-1 g2 grids">
+          {{ grade.exammark }}
         </div>
-        <div class="griditem grid-item-1 grids">
-            Total marks
+        <div class="griditem grid-item-1 g3 grids">
+          {{ grade.assignmark }}
         </div>
-        <div class="griditem grid-item-1 grids">
-            Grade
+        <div class="griditem grid-item-1 g4 grids">
+          {{ grade.totalmark }}
         </div>
-    </div>
-    <div class="grid-container maing">
-        <div class="griditem grid-item-1 grids">
-            PUSL3031 - Full Stack Development
+        <div class="griditem grid-item-1 g5 grids">
+          {{ grade.grade }}
         </div>
-        <div class="griditem grid-item-1 grids">
-            80.50
-        </div>
-        <div class="griditem grid-item-1 grids">
-             60.21
-        </div>
-        <div class="griditem grid-item-1 grids">
-             70.84
-        </div>
-        <div class="griditem grid-item-1 grids">
-            A
-        </div>
-    </div>
+      </div>
     <div class="container d-flex justify-content-center">
         <form (submit)="downloadResults()">
             <button type="submit" class="btn btcon btn-primary btn-lg">Download Results</button>
