--- a/src/app/subcomponents/staffmodulecontent/staffmodulecontent.component.html
+++ b/src/app/subcomponents/staffmodulecontent/staffmodulecontent.component.html
@@ -29,4 +29,23 @@
         
        </div>
     </div>
+
+    <div class="grid-container maing justify-content-center">
+      <div class="container justify-content-center nt">
+          Delete Lecture Materials Here!
+      </div>
+     <div class="container justify-content-center notifybox">
+      <form (submit)="submitDForm()">
+          <div class="mb-3">
+            <label for="fileTitle" class="form-label">File Title</label>
+            <textarea class="form-control" id="fileTitle" rows="3" [(ngModel)]="formD.fileTitle" name="fileTitle" required></textarea>
+          </div>
+          <div class="container">
+            <button type="submit" class="btn btcon btn-primary btn-lg">Add</button>
+          </div>
+        </form>
+        
+      
+     </div>
+  </div>
 </div>
